For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.


--------------------------------------------------------------------------------
Version 1.8.6 - <codename> released on <releaseDate>

New Features
- New iPod UserAgent blocking strings examples
- Snort 2.8.5 compatibility (closes #581, #846, #849)
- Installation guide updated

Bugfix
- Fixed issues with SSH as CLI transport
- Fixed broken 802.1x behaviour (closes #839, #841)
- Fixed pfmon Out of Memory! crash when trappable network is very large ie: /8  
  (closes #861)
- Fixed a problem when adding or editing a Cisco Catalyst 2970, 3500XL and 
  Wireless Controller 4400 from the Web Admin interface (closes #836)
- Fixed SNMPv3 configuration from Web Admin interface and pfcmd. Missing 
  SNMPUserNameTrap parameter. Did not affect flat file config. (closes #853)
- Fixed missing library requirement when using PacketFence with routed VLANs
  (closes #838)
- Database schema updated for our backup script in addons/ (closes #800)
- Backup script keeps more location history by default
- Got rid of the non-InnoDB tables (closes #747)
- Removed some unnecessary warnings (closes #850, #862)

--------------------------------------------------------------------------------
Version 1.8.5 released on 2009-10-28

New Hardware Support
- Amer SS2R24i switch in linkUp/linkDown mode
- 3Com Switch 4200G and SuperStack 4500 in port-security mode
- Enterasys D2, Matrix N3 and SecureStack C3 in linkUp/linkDown and maclock 
  (port-security)
- Extreme Networks Summit X250e in linkUp/linkDown mode

New Features
- Nessus integration with captive portal for scanning on registration
- PacketFence is now distributed as a yum repository (avoids having the
  installer pull a lot of cpan modules and jpgraph)
- normal/correct VLAN default behaviour changed (see UPGRADE for details)
- PacketFence is now able to automatically create static routes for routed 