@@ -347,6 +347,7 @@ description=<<EOT
 If expire_mode is set to "session", this is the amount of time after
 a node's iplog entry is closed that it reverts to an unregistered
 state.
+Warning: Does not work in vlan isolation mode!
 EOT
 
 [registration.queuesize]
